# glowtail

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/glowtail-cli/: Cargo.toml
crates/glowtail-cli/src/: args.rs  main.rs
crates/glowtail-cli/tests/: cli_tail_perf.rs
crates/glowtail-core/: Cargo.toml
crates/glowtail-core/src/: error.rs  events.rs  filter.rs  index.rs  lib.rs  model.rs  parser.rs  session.rs  source.rs  viewport.rs
crates/glowtail-core/tests/: architecture.rs  large_viewport.rs  parser_perf.rs  search_perf.rs  tail_perf.rs  viewport_perf.rs
crates/glowtail-gpui/: Cargo.toml
crates/glowtail-gpui/src/: main.rs
crates/glowtail-gpui/tests/: render_perf.rs
crates/glowtail-gui/: Cargo.toml
crates/glowtail-gui/src/: main.rs
crates/glowtail-gui/tests/: render_perf.rs
crates/glowtail-iced/: Cargo.toml
crates/glowtail-iced/src/: main.rs
crates/glowtail-iced/tests/: render_perf.rs
crates/glowtail-makepad/: Cargo.toml
crates/glowtail-makepad/src/: main.rs
crates/glowtail-makepad/tests/: render_perf.rs
crates/glowtail-tui/: Cargo.toml
crates/glowtail-tui/src/: app.rs  lib.rs  terminal.rs  widgets.rs
crates/glowtail-ui-common/: Cargo.toml
crates/glowtail-ui-common/src/: lib.rs
crates/glowtail-ui-common/tests/: architecture.rs
docs/code-reviews/: 2026-05-23-full-review.md  2026-05-26-performance-review.md
scripts/: gen-sample.sh
