[workspace]
members = [
  "crates/glowtail-core",
  "crates/glowtail-ui-common",
  "crates/glowtail-cli",
  "crates/glowtail-tui",
  "crates/glowtail-gui",
  "crates/glowtail-gpui",
  "crates/glowtail-iced",
  "crates/glowtail-makepad",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
eframe = { version = "0.28", features = ["wgpu"] }
gpui = "0.2.2"
iced = { version = "0.13", features = ["tokio"] }
makepad-widgets = "1.0"
ratatui = "0.28"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
