[package]
name = "glowtail-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
glowtail-core = { path = "../glowtail-core" }
glowtail-tui = { path = "../glowtail-tui" }
glowtail-ui-common = { path = "../glowtail-ui-common" }
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
