[package]
name = "glowtail-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
eframe.workspace = true
glowtail-core = { path = "../glowtail-core" }
glowtail-ui-common = { path = "../glowtail-ui-common" }
tokio.workspace = true
