[package]
name = "glowtail-makepad"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
glowtail-core = { path = "../glowtail-core" }
glowtail-ui-common = { path = "../glowtail-ui-common" }
makepad-widgets.workspace = true
tokio.workspace = true
